fixed scrollbar

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -25,7 +25,7 @@ body {
     top: 0;
     background-color: #1d1f21;
     color: white;
-    bottom: 1em;
+    bottom: 2em;
     padding:.3em;
     font-size: 3em;
 }
